# spanish-press-pangram-monitor

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
config/: media.yaml
src/: __init__.py  audit.py  database.py  discover.py  extract.py  gdelt_client.py  main.py  models.py  pangram_client.py  source_probes.py  url_filters.py  utils.py  validation.py  wayback_audit.py  wayback_client.py
src/media_adapters/: __init__.py  abc.py  base.py  prisa.py  spanish_press.py  unidad_editorial.py
tests/: test_analyze_selection.py  test_audit.py  test_database.py  test_discover.py  test_extract.py  test_gdelt_client.py  test_headers.py  test_pangram_client.py  test_source_probes.py  test_time_window.py  test_url_filters.py  test_utils.py  test_validation.py  test_wayback.py
