[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spanish-press-pangram-monitor"
version = "0.1.0"
description = "Open-source pipeline to discover, extract, and analyze Spanish press articles with Pangram AI Detection API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Spanish Press Pangram Monitor contributors" },
]
keywords = ["spanish-press", "ai-detection", "pangram", "scraping", "journalism", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "trafilatura>=1.9.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
